[gd_scene load_steps=12 format=3 uid="uid://vq2owpa4tcwa"]

[ext_resource type="Texture2D" uid="uid://oj1p0i67700u" path="res://assets/Characters/2 - Mr. Mochi/Idle (32 x 32).png" id="1_5twxx"]
[ext_resource type="FontFile" uid="uid://d8efdb58iymm" path="res://assets/Fonts/NbPixelFontBundle_v1_0/KarenFat.ttf" id="1_c63jy"]
[ext_resource type="Script" path="res://scripts/utils/game_over.gd" id="1_lbx4u"]
[ext_resource type="Texture2D" uid="uid://dcxn3rg24eu6h" path="res://assets/Characters/2 - Mr. Mochi/Hurt (32 x 32).png" id="2_dnf68"]

[sub_resource type="AtlasTexture" id="AtlasTexture_05d70"]
atlas = ExtResource("1_5twxx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1bv6"]
atlas = ExtResource("1_5twxx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_efnv4"]
atlas = ExtResource("2_dnf68")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_0xdq1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_05d70")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1bv6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_efnv4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_x1u8e"]
resource_name = "end"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("menu_holder/AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.9, 1, 1.2, 1.5, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 2, 2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("menu_holder/AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1.1, 1.4, 1.5, 1.7, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-160, 10), Vector2(-200, -10), Vector2(-220, -20), Vector2(-230, 15), Vector2(-230, 50)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("menu_holder/AnimatedSprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1.1, 1.4, 1.5, 1.7, 1.8, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.448799, -0.785398, -1.22173, -1.5708, -1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("menu_holder:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_bxjci"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("menu_holder/AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("menu_holder/AnimatedSprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-183, 10)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("menu_holder/AnimatedSprite2D:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("ColorRect:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("menu_holder:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_skv5o"]
_data = {
"RESET": SubResource("Animation_bxjci"),
"end": SubResource("Animation_x1u8e")
}

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lbx4u")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="menu_holder" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="menu_holder"]
texture_filter = 1
position = Vector2(-183, 10)
rotation = -1.5708
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_0xdq1")

[node name="restart_button" type="TouchScreenButton" parent="menu_holder"]

[node name="Label" type="Label" parent="menu_holder/restart_button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -91.0
offset_top = -79.0
offset_right = 89.0
offset_bottom = -47.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_c63jy")
theme_override_font_sizes/font_size = 32
text = "FIM DE JOGO"

[node name="restart" type="Button" parent="menu_holder/restart_button"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_c63jy")
theme_override_font_sizes/font_size = 16
text = "REINICIAR"
metadata/_edit_use_anchors_ = true

[node name="quit_button" type="TouchScreenButton" parent="menu_holder"]
position = Vector2(0, 39)

[node name="quit" type="Button" parent="menu_holder/quit_button"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.5
offset_top = -12.0
offset_right = 20.5
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_c63jy")
theme_override_font_sizes/font_size = 16
text = "SAIR DO JOGO
"
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_skv5o")
}
autoplay = "end"

[connection signal="pressed" from="menu_holder/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="menu_holder/restart_button/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="menu_holder/quit_button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="menu_holder/quit_button/quit" to="." method="_on_quit_pressed"]
